--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <main>
         <section >
            <div class="Encrypt" contenteditable="true">
-            <input id="txtEncrypt" type="text" class="txtEncrypt" type="text" placeholder="Ingrese el texto aqui">
-            <textarea id="txtDecrypt" type="text" class="txtDecrypt" name="" id="" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+           <!-- <input id="txtEncrypt" type="text" class="txtEncrypt" type="text" placeholder="Ingrese el texto aqui">
+           -->
+            <textarea id="txtEncryptDecrypt" type="text" class="txtDecrypt" name="" id="" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
            </div>
                 
            
