--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -18,9 +18,7 @@
     <main>
         <section>
             <div class="Encrypt" contenteditable="true">
-                <!-- <input id="txtEncrypt" type="text" class="txtEncrypt" type="text" placeholder="Ingrese el texto aqui">
-           -->
-                <textarea id="txtEncryptDecrypt" type="text" class="txtDecrypt" name="" id="" cols="30" rows="10"
+                <textarea id="txtEncryptDecrypt" type="text" class="txtEncryptDecrypt" name="" id="" cols="30" rows="10"
                     placeholder="Ingrese el texto aqui"></textarea>
             </div>
 
